--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,48 @@
-a{
-    color: #fff!important;
-}
-
 @keyframes shake {
     0% {
         transform: rotate(0deg);
     }
+
     25% {
-        transform: rotate(-5deg); /* Rotate left */
+        transform: rotate(-5deg);
+        /* Rotate left */
     }
+
     50% {
-        transform: rotate(5deg); /* Rotate right */
+        transform: rotate(5deg);
+        /* Rotate right */
     }
+
     75% {
-        transform: rotate(-5deg); /* Rotate left */
+        transform: rotate(-5deg);
+        /* Rotate left */
     }
+
     100% {
         transform: rotate(0deg);
     }
 }
 
 .icon-shake {
-    display: inline-block; /* Make sure the element can be transformed */
+    display: inline-block;
+    /* Make sure the element can be transformed */
     animation: shake 0.5s ease-in-out !important;
+}
+
+
+.logo {
+    position: 'absolute';
+    filter: grayscale(0%);
+    transform: scale(0)
+}
+
+.logo:hover {
+    filter: grayscale(0%);
+}
+
+
+
+.reliance {
+    top: 100;
+    left: 100;
 }
