--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@
     line-height: 1.5;
     word-wrap: break-word;
     /* max-width: 300px; */
-    background: #000;
     padding: 1em;
     border-radius: 8px;
     box-shadow: 5px 5px white;
@@ -125,6 +124,7 @@
     border-collapse: collapse;
     margin: 1rem 0;
     font-size: 14px;
+    overflow-x: scroll;
 }
 
 .chat-bot-readme th,
